apps/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr

  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr

    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:v1.6.0-ls361
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 6767
              protocol: TCP

          volumeMounts:
            - name: config
              mountPath: /config

            - name: media
              mountPath: /media

          resources:
            requests:
              cpu: 50m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config

        - name: media
          persistentVolumeClaim:
            claimName: media-library
