apps/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: bazarr

  ports:
    - name: http
      port: 6767
      targetPort: http
      protocol: TCP
