apps/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - bazarr.apps.bubudog.net
      secretName: bazarr-tls

  rules:
    - host: bazarr.apps.bubudog.net

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: bazarr
                port:
                  number: 6767
